# spring-boot-online-exam

./: .gitignore  Dockerfile  LICENSE  README.en.md  README.md  build.sh  entrypoint.sh  make_docker.sh  start.sh
backend/exam/: .env  .gitignore  Dockerfile  Pipfile  README.md  manage.py  nginx.conf  pom.xml  pyproject.toml
backend/exam/apps/: __init__.py
backend/exam/apps/exam/: models.py  serializers.py  urls.py  views.py
backend/exam/apps/question/: models.py  serializers.py  urls.py  views.py
backend/exam/apps/users/: models.py  serializers.py  urls.py  views.py
backend/exam/apps/users/migrations/: 0001_initial.py
backend/exam/backend/: middleware.py  router.py  settings.py  urls.py  wsgi.py
backend/exam/src/main/java/lsgwr/exam/config/: IntercepterConfig.java  ServletConfig.java  Swagger2Config.java  WebViewConfig.java
backend/exam/src/main/java/lsgwr/exam/controller/: ExamController.java  UploadDownloadController.java  UserController.java
backend/exam/src/main/java/lsgwr/exam/dto/: package-info.java
backend/exam/src/main/java/lsgwr/exam/entity/: Action.java  Exam.java  ExamRecord.java  Page.java  QuestionLevel.java  QuestionType.java  Role.java  User.java
backend/exam/src/main/java/lsgwr/exam/enums/: LoginTypeEnum.java  QuestionEnum.java  ResultEnum.java  RoleEnum.java
backend/exam/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
backend/exam/src/main/resources/static/: README.md
backend/exam/utils/: authentication.py  enum.py  execption.py  jwt_util.py  logger.py  pagination.py  user_backend.py
(+321 files in other folders)
